# palisade-correlation

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  verify.sh
.github/workflows/: ci.yml  security.yml
benches/: correlation_performance.rs
examples/: README.md  basic_defaults.rs  encrypted_logging.rs  policy_reload.rs  runtime_hot_paths.rs  timing_profile.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: public_api.rs
src/: api.rs  config.rs  engine.rs  error_codes.rs  errors.rs  events.rs  failures.rs  lib.rs  matching.rs  patterns.rs  policy.rs  runtime.rs  timing.rs
tests/: log_feature.rs  public_api.rs
