[package]
name = "palisade-correlation-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
palisade-config = "2.0.0"
palisade-correlation = { path = ".." }

[[bin]]
name = "public_api"
path = "fuzz_targets/public_api.rs"
test = false
doc = false
bench = false
